Add initial features
Add game board, sign in, sign up, change password and sign out forms.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,20 @@
 @import '~bootstrap/scss/bootstrap';
+
+$alt-color: $cyan;
+$body-bg-color: $gray-200;
+$font-color: $light;
+
+.box {
+  align-items: center;
+  background-color: $secondary;
+  border: 4px solid $black;
+  color: $font-color;
+  display: flex;
+  height: 80px;
+  justify-content: center;
+}
+
+.container {
+  border: 0;
+  box-shadow: none;
+}
