--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,6 +3,7 @@
 $alt-color: $cyan;
 $body-bg-color: $gray-200;
 $font-color: $light;
+$blue: #0d0079;
 
 .box {
   align-items: center;
@@ -15,6 +16,41 @@ $font-color: $light;
 }
 
 .container {
-  border: 0;
-  box-shadow: none;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  max-height: 60vh;
+  max-width: 60vh;
+  min-height: 60vh;
+  width: 60%;
+}
+
+.gameboard {
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+
+  > .box {
+    align-items: center;
+    background-color: white;
+    border-bottom: 1px solid #000;
+    border-right: 1px solid #000;
+    color: $blue;
+    display: flex;
+    font-size: 12vh;
+    justify-content: center;
+    min-height: calc(100% / 3);
+    text-shadow: 2px 2px rgba(0, 0, 0, .25);
+
+    &:nth-child(3n) {
+      border-right: 0;
+    }
+
+    &:nth-last-child(-1n + 3) {
+      border-bottom: 0;
+    }
+
+  }
+
 }
