--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,26 +4,21 @@ $alt-color: $cyan;
 $body-bg-color: $gray-200;
 $font-color: $light;
 $blue: #0d0079;
+$white: #fff;
+$borders: #000;
+$tshadow: rgba(0, 0, 0, .25);
 
-.box {
-  align-items: center;
-  background-color: $secondary;
-  border: 4px solid $black;
-  color: $font-color;
-  display: flex;
-  height: 80px;
-  justify-content: center;
+body {
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 15px;
+  min-height: 100vh;
 }
 
 .container {
-  align-items: center;
-  display: flex;
-  justify-content: center;
   margin: auto;
   max-height: 60vh;
   max-width: 60vh;
-  min-height: 60vh;
-  width: 60%;
+  width: 90%;
 }
 
 .gameboard {
@@ -33,15 +28,16 @@ $blue: #0d0079;
 
   > .box {
     align-items: center;
-    background-color: white;
-    border-bottom: 1px solid #000;
-    border-right: 1px solid #000;
+    background-color: $white;
+    border-bottom: 6px solid $borders;
+    border-right: 6px solid $borders;
     color: $blue;
     display: flex;
+    font-family: 'Gloria Hallelujah', cursive;
     font-size: 12vh;
     justify-content: center;
     min-height: calc(100% / 3);
-    text-shadow: 2px 2px rgba(0, 0, 0, .25);
+    text-shadow: 2px 2px $tshadow;
 
     &:nth-child(3n) {
       border-right: 0;
