--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,6 +14,14 @@ body {
   min-height: 100vh;
 }
 
+div.hidden {
+  display: none;
+}
+
+form.hidden {
+  display: none;
+}
+
 .container {
   margin: auto;
   max-height: 60vh;
